Update SymbolNavigation CSS to fix overflow issue

--- a/src/components/SymbolNavigation/SymbolNavigation.module.css
+++ b/src/components/SymbolNavigation/SymbolNavigation.module.css
@@ -1,5 +1,6 @@
 .SymbolNavigation {
-  overflow-y: scroll;
+  overflow: auto;
+  height: 80cqh;
 }
 
 .NavLink {
